# crud-fastapi-postgres-streamlit

./: README.md  docker-compose.yml  pyproject.toml
backend/src/: .env.example  Dockerfile  controllers.py  database.py  deps.py  main.py  models.py  requirements.txt  routes.py  schemas.py  security.py
frontend/src/: app.py  requirements.txt
